# deepfield

./: .containerignore  .env.example  .gitignore  Containerfile  LICENSE  Makefile  README.md  TODO.md  podman-compose.yaml  prompt.txt  pyproject.toml
backend/: .containerignore  .gitignore  Containerfile  celery_app.py  pyproject.toml
backend/app/: auth.py  cli.py  db.py  main.py  orchestrator.py
backend/app/agents/: base.py  correlation_agent.py  incident.py  prompts.py  rca.py  remediation.py  triage.py
backend/app/analysis/: evaluator.py  pattern_analyzer.py  rubric_history.py
backend/app/api/: demo.py  feedback.py  incidents.py  integration.py  metrics.py  observatory.py  remediation.py  runs.py  scenarios.py  session.py  sse.py  tuning.py  workers.py  ws.py
backend/app/benchmark/: generator.py  metrics.py  preflight.py  profiles.py  runner.py
backend/app/collectors/: alertmanager.py  base.py  multi_cluster.py  openshift.py  splunk.py  (+2 more)
backend/migrations/: 001_initial_schema.sql  002_stats_persistence.sql  003_cluster_profiles.sql  004_rubric_history.sql  005_incidents.sql  006_materialized_views.sql  007_feedback.sql  008_evidence_bundles.sql
backend/static/: index.html
backend/tasks/: monitoring.py  persistence.py
backend/tests/: test_adaptive_agents.py  test_cluster_profile.py  test_deep_rca.py  test_evaluator.py  test_incident_manager.py  test_integration_events.py  test_pattern_analyzer.py  test_process_loop.py  test_remediation_namespace.py  test_remote_classes.py  test_safety_guardrails.py  test_scenario_runner.py  test_tarsy_escalation.py
(+166 files in other folders)
